Blender crashes (seg fault) selecting a view mode for "Preview" in Sequence Editor #38002

Closed
opened 2013-12-31 02:26:21 +01:00 by Paulo José Oliveira Amaro · 7 comments

System Information
Ubuntu 13.10 32-bit
Intel Ironlake Mobile x86/MMX/SSE

Blender Version
Broken: 2.69.7 e1b322b

Short description of error
Blender crashes in a segmentation fault after selecting the view mode for a "Preview" window created by splitting an existing Preview window.

Exact steps for others to reproduce the error
From Blender's startup file:

  1. Choose the Video Editing Scene Layout.
  2. Add an image or movie to the Sequencer timeline, make sure it shows on the preview window.
  3. Change the Dope Sheet view window to a Video Sequencer Editor view.
  4. Select "preview" type and then select one of the analysis display modes, i.e waveform.
  5. Split this window and try to change the display to an different analysis display, like histogram or vectorsope.
  6. Blender will crash. If it don't crash instantly, try to change the analysis display again or split the window one more time.

Note: If you don't select an analysis mode before splitting the window, you can create 20 vectorscopes and histograms windows and Blender will not crash.

Screenshot_from_2013-12-30_23:12:02.jpg

Crash log:

 

Blender 2.69 (sub 7), Commit date: 2013-12-24 12:21, Hash e1b322b

bpy.context.space_data.display_mode = 'VECTOR_SCOPE'  # Property
bpy.context.space_data.display_mode = 'HISTOGRAM'  # Property

backtrace

/usr/lib/blender/blender() [0x8749fde]
[0xb76f3400]
/usr/lib/blender/blender(colormanage_cache_free+0x3f) [0x8ea3def]
/usr/lib/blender/blender(IMB_freeImBuf+0x77) [0x8ea01d7]
/usr/lib/blender/blender(draw_image_seq+0x5ba) [0x87fca9a]
/usr/lib/blender/blender() [0x87f6848]
/usr/lib/blender/blender(ED_region_do_draw+0xa23) [0x89f6873]
/usr/lib/blender/blender(wm_draw_update+0x621) [0x874fac1]
/usr/lib/blender/blender(WM_main+0x38) [0x874c738]
/usr/lib/blender/blender(main+0x1189) [0x8707809]
/lib/i386-linux-gnu/libc.so.6(__libc_start_main+0xf5) [0xb4e69905]
/usr/lib/blender/blender() [0x8749856]

Debug info:

paulo@paulo-Aspire-5742:~$ blender -d
Switching to fully guarded memory allocator.
Blender 2.69 (sub 7)
Build: 2013-12-24 15:31:35 Linux RelWithDebInfo
argv[0] = /usr/lib/blender/blender
argv[1] = -P
argv[2] = /usr/lib/blender/reset_excepthook.py
argv[3] = -d

connect failed: No such file or directory

Note: No (valid) '/home/paulo/.config/blender/2.69/config/startup.blend' found, fall back to built-in default.

read file 
  Version 267 sub 1 date 1970-01-01 00:00 hash 

ordered
 OBCube
 OBLamp
 OBCamera
read file /home/paulo/.config/blender/2.69/config/userpref.blend
  Version 269 sub 7 date 2013-12-17 09:47 hash db795b6
Read new prefs: /home/paulo/.config/blender/2.69/config/userpref.blend
read file 
  Version 262 sub 3 date 1970-01-01 00:00 hash 
read file 
  Version 268 sub 5 date 1970-01-01 00:00 hash 
recalcob Cube
recalcdata Cube
ED_undo_push:    Video Editing
ED_undo_push: Add Image Strip
areas don't share edge
Memoryblock free: attempt to free illegal pointer
Writing: /docs/Blender/Blender Autosave/blender.crash.txt
Segmentation fault

I can't provide an blend file because Blender can't pack the image added in Sequencer's timeline into the blend file. I'm not sure it should be taken as a bug or an spec.

**System Information** Ubuntu 13.10 32-bit Intel Ironlake Mobile x86/MMX/SSE **Blender Version** Broken: 2.69.7 e1b322b **Short description of error** Blender crashes in a segmentation fault after selecting the view mode for a "Preview" window created by splitting an existing Preview window. **Exact steps for others to reproduce the error** From Blender's startup file: 1. Choose the Video Editing Scene Layout. 2. Add an image or movie to the Sequencer timeline, make sure it shows on the preview window. 3. Change the Dope Sheet view window to a Video Sequencer Editor view. 4. Select "preview" type and then select one of the analysis display modes, i.e waveform. 5. Split this window and try to change the display to an different analysis display, like histogram or vectorsope. 6. Blender will crash. If it don't crash instantly, try to change the analysis display again or split the window one more time. Note: If you don't select an analysis mode **before** splitting the window, you can create 20 vectorscopes and histograms windows and Blender will not crash. ![Screenshot_from_2013-12-30_23:12:02.jpg](https://archive.blender.org/developer/F59356/Screenshot_from_2013-12-30_23_12_02.jpg) **Crash log:** ``` ``` # Blender 2.69 (sub 7), Commit date: 2013-12-24 12:21, Hash e1b322b ``` bpy.context.space_data.display_mode = 'VECTOR_SCOPE' # Property bpy.context.space_data.display_mode = 'HISTOGRAM' # Property ``` # backtrace ``` /usr/lib/blender/blender() [0x8749fde] [0xb76f3400] /usr/lib/blender/blender(colormanage_cache_free+0x3f) [0x8ea3def] /usr/lib/blender/blender(IMB_freeImBuf+0x77) [0x8ea01d7] /usr/lib/blender/blender(draw_image_seq+0x5ba) [0x87fca9a] /usr/lib/blender/blender() [0x87f6848] /usr/lib/blender/blender(ED_region_do_draw+0xa23) [0x89f6873] /usr/lib/blender/blender(wm_draw_update+0x621) [0x874fac1] /usr/lib/blender/blender(WM_main+0x38) [0x874c738] /usr/lib/blender/blender(main+0x1189) [0x8707809] /lib/i386-linux-gnu/libc.so.6(__libc_start_main+0xf5) [0xb4e69905] /usr/lib/blender/blender() [0x8749856] ``` **Debug info**: ``` paulo@paulo-Aspire-5742:~$ blender -d Switching to fully guarded memory allocator. Blender 2.69 (sub 7) Build: 2013-12-24 15:31:35 Linux RelWithDebInfo argv[0] = /usr/lib/blender/blender argv[1] = -P argv[2] = /usr/lib/blender/reset_excepthook.py argv[3] = -d connect failed: No such file or directory Note: No (valid) '/home/paulo/.config/blender/2.69/config/startup.blend' found, fall back to built-in default. read file Version 267 sub 1 date 1970-01-01 00:00 hash ordered OBCube OBLamp OBCamera read file /home/paulo/.config/blender/2.69/config/userpref.blend Version 269 sub 7 date 2013-12-17 09:47 hash db795b6 Read new prefs: /home/paulo/.config/blender/2.69/config/userpref.blend read file Version 262 sub 3 date 1970-01-01 00:00 hash read file Version 268 sub 5 date 1970-01-01 00:00 hash recalcob Cube recalcdata Cube ED_undo_push: Video Editing ED_undo_push: Add Image Strip areas don't share edge Memoryblock free: attempt to free illegal pointer Writing: /docs/Blender/Blender Autosave/blender.crash.txt Segmentation fault ``` I can't provide an blend file because Blender can't pack the image added in Sequencer's timeline into the blend file. I'm not sure it should be taken as a bug or an spec.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @PauloJoseOliveiraAmaro

Added subscriber: @PauloJoseOliveiraAmaro
Sergey Sharybin was assigned by Brecht Van Lommel 2013-12-31 02:28:55 +01:00

This issue was referenced by blender/blender-addons-contrib@f54778b7ee

This issue was referenced by blender/blender-addons-contrib@f54778b7ee70b0039ac6fba254fdbc61a36515ac

This issue was referenced by f54778b7ee

This issue was referenced by f54778b7ee70b0039ac6fba254fdbc61a36515ac

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit f54778b7ee.

Closed by commit f54778b7ee.

I was really fast! :-D

I was really fast! :-D
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38002
No description provided.