Fix T38002: crash selecting a view mode for "Preview" in Sequence Editor